@@ -4,85 +4,55 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import static java.util.Map.entry;
 import static junit.framework.TestCase.assertEquals;
 
 // based on https://github.com/CodeFX-org/demo-java-9/blob/master/src/org/codefx/demo/java9/api/collection_factory_methods/CollectionFactories.java
 public class CollectionFactoriesTest {
     private final static Logger LOG = LoggerFactory.getLogger(CollectionFactoriesTest.class);
 
-    /*
-     * Fix deze test door gebruik te maken van (immutable!) List.of
-     *
-     * In Java 8 zou je hiervoor wrapping toepassen middels bijvoorbeeld Collections.unmodifiableList(list)
-     */
-    @Test(expected = UnsupportedOperationException.class)
-    public void verifyThatListsAreImmutable() {
-        // setup
-        List<String> list = new ArrayList<>();
-        list.add("a");
-        list.add("b");
-        list.add("c");
+    @Test
+    public void verifyThatWeCanCreateVariousCollections() {
+        List<String> list = List.of("a", "b", "c");
+        Set<String> set = Set.of("a", "b", "c");
+        Map<String, Integer> mapImmediate = Map.of(
+                "one", 1,
+                "two", 2,
+                "three", 3);
+        Map<String, Integer> mapEntries = Map.ofEntries(
+                entry("one", 1),
+                entry("two", 2),
+                entry("three", 3));
 
-        // verify
-        addToCollection(list, "d");
+        Stream.of(list, set, mapImmediate.entrySet(), mapEntries.entrySet())
+                .map(CollectionFactoriesTest::joinElementsToString)
+                .forEach(LOG::info);
     }
 
-    /*
-     * Fix deze test door gebruik te maken van (immutable!) Set.of
-     */
-    @Test(expected = UnsupportedOperationException.class)
-    public void verifyThatSetsAreImmutable() {
-        // setup
-        Set<String> set = new HashSet<>();
-        set.add("a");
-        set.add("b");
-        set.add("c");
-
-        // verify
-        addToCollection(set, "d");
+    public static String joinElementsToString(Collection<?> collection) {
+        return collection.stream()
+                .map(Object::toString)
+                .collect(Collectors.joining(", ", "", "\n"));
     }
 
-    /*
-     * Fix deze test door gebruik te maken van (immutable!) Map.of
-     */
-    @Test(expected = UnsupportedOperationException.class)
-    public void verifyThatMapsAreImmutable() {
-        // setup
-        Map<String, Integer> map = new HashMap<>();
-        map.put("one", 1);
-        map.put("two", 2);
-        map.put("three", 3);
-
-        // put attempt
-        map.put("four", 4);
-        LOG.info("{} now contains: \n \t{}", getCleanCollectionName(map.entrySet()), map);
-    }
-
-    /*
-     * Geen nulls toegestaan in List.of() en consorten!
-     *
-     * Controleer dat het aanmaken van een list met een null element faalt met de bekende NPE
-     */
     @Test(expected = NullPointerException.class)
     public void verifyThatElementsMustNotBeNull() {
-        // to do: implement
+        List.of(null);
     }
 
-    /*
-     * Arrays worden platgeslagen!
-     *
-     * Controleer dat het aanmaken van een list o.b.v. een array een List met de elementen van de array
-     * oplevert. En dus niet een List met 1 element: de array. Er is dus gekozen voor het meest intuitieve gedrag.
-     */
     @Test
     public void verifyThatArraysAreFlattened() {
         final String[] array = {"foo", "bar", "baz"};
 
         // to do: create elements List filled with array elements
-        List<String> elements = null;
+        List<String> elements = List.of(array);
 
         assertEquals(3, elements.size());
     }
@@ -98,7 +68,27 @@ public class CollectionFactoriesTest {
      */
     @Test(expected = IllegalArgumentException.class)
     public void verifyThatDuplicateKeysAreRejected() {
-        // to implement
+        Map.of(
+                "aap", "foo",
+                "noot", "bar",
+                "mies", "baz",
+                "mies", "fnord"
+                );
+    }
+
+    @Test(expected = UnsupportedOperationException.class)
+    public void verifyThatListOfIsImmutable() {
+        List.of("a", "b", "c").add("d");
+    }
+
+    @Test(expected = UnsupportedOperationException.class)
+    public void verifyThatSetOfIsImmutable() {
+        Set.of("a", "b", "c").add("d");
+    }
+
+    @Test(expected = UnsupportedOperationException.class)
+    public void verifyThatMapOfIsImmutable() {
+        Map.ofEntries(entry("one", 1)).entrySet().add(entry("two", 2));
     }
 
     /*
@@ -110,9 +100,9 @@ public class CollectionFactoriesTest {
      */
     @Test
     public void orderIsUnstableAcrossRuns() {
-        final List<String> list = null;//List.of("a", "b", "c");
+        final List<String> list = List.of("a", "b", "c");
         LOG.info("list: {}", list);
-        final Set<String> set = null;//Set.of("a", "b", "c");
+        final Set<String> set = Set.of("a", "b", "c");
         LOG.info("set: {}", set);
 
         int i = 0;
@@ -120,28 +110,4 @@ public class CollectionFactoriesTest {
             assertEquals(s, list.get(i++));
         }
     }
-
-    // --------
-    // hieronder alleen helper code
-    // --------
-    private static String joinElementsToString(Collection<?> collection) {
-        return collection.stream()
-                .map(Object::toString)
-                .collect(Collectors.joining(", ", "", "\n"));
-    }
-
-    private <T> void addToCollection(Collection<T> collection, T item) {
-        String collectionName = getCleanCollectionName(collection);
-        try {
-            collection.add(item);
-            LOG.info("{} is added to {}", item, collectionName);
-        } finally {
-            LOG.info("{} now contains: \n \t{}", collectionName, collection);
-        }
-    }
-
-    private <T> String getCleanCollectionName(final Collection<T> collection) {
-        return collection.getClass().toString().substring(collection.getClass().toString().lastIndexOf(".") + 1);
-    }
-
 }
